--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title>Moview</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
                         <input type="text" id="Buscador-buscador">
                         <button id="lupa"><img src="../Imagenes/lupa Blanca.png" alt="Buscador"></button>
                     </form>
-                    <button id="home">home</button>
-                    <button id="help">help</button>
+                    <button id="home">Home</button>
+                    <button id="help">Help</button>
                     <button id="notificaciones"><img src="../Imagenes/campana Blanca.png" alt=""></button>
                     <button id="usuario"> <img src="../Imagenes/User White.png" alt=""></button>
                 </nav>
